--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 	<!-- Bootstrap core CSS -->
 	<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/site.css">
-	<title>Contact | Learn Japanese | Online | Reading | UK</title>
+	<title>Contact | Learn Japanese | Reading | Berkshire | UK</title>
 	<!-- <link rel="canonical" href="https://japaneselessons4u.com/contact.html"> -->
 </head>
 
