--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="description"
 		content="Learn Japanese at your own pace. I teach basic and Advanced Japanese Lessons online.">
-	<meta name="robots" content="index,follow">
+	<!-- <meta name="robots" content="index,follow"> -->
 	<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
 
 	<!-- Bootstrap core CSS -->
@@ -17,7 +17,7 @@
 	<link rel="stylesheet" type="text/css" href="css/site.css">
 	<link rel="canonical" href="https://japaneselessons4u.com/index.html">
 
-	<title>Home | Learn Japanese | Online | Reading | UK</title>
+	<title>Home | Learn Japanese | Reading | Berkshire | UK</title>
 </head>
 
 <body>
@@ -80,7 +80,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-sm-10 col-lg-8 col-xl-7 col-12 offset-sm-1 offset-md-2 offset-lg-2">
-					<h1 class="mb-4 mt-0 text-center">Japanese Lessons Online</h1>
+					<h1 class="mb-4 mt-0 text-center">Japanese Lessons | Reading | Berkshire</h1>
 
 					<section class="para para-home">
 						<h4>Welcome to Sonoko's Japanese Lessons - <span class="logo-2"><i>SJL</i></span>
