--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 	<link rel="stylesheet" type="text/css" href="css/site.css">
 	<!-- <link rel="canonical" href="https://japaneselessons4u.com/about.html"> -->
 
-	<title>About | Learn Japanese | Online | Reading | UK</title>
+	<title>About | Learn Japanese | Reading | Berkshire | UK </title>
 </head>
 
 <body>
