--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
 	<link rel="stylesheet" type="text/css" href="css/site.css">
-	<link rel="canonical" href="https://japaneselessons4u.com/index.html">
+	<link rel="canonical" href="https://japaneselessons4u.com/">
 
 	<title>Home | Learn Japanese | Reading | Berkshire | UK</title>
 </head>
