--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
 	<link rel="stylesheet" type="text/css" href="css/site.css">
-	<link rel="canonical" href="https://japaneselessons4u.com/">
+	<link rel="canonical" href="https://www.japaneselessons4u.com/">
 
 	<title>Home | Learn Japanese | Reading | Berkshire | UK</title>
 </head>
@@ -91,7 +91,7 @@
 							Lessons are flexible and you can learn at your own pace.
 						</p>
 
-						<p>Lessons are given online via Skype <span class="pipe">|</span> Zoom on a
+						<p>Lessons are given online via Microsoft Teams <span class="pipe">|</span> Zoom on a
 							one-to-one basis.
 						</p>
 
