added cancellation policy and improved  SEO

--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,11 @@
 					<p class="mt-lg-2">
 						<span><img src=" images/16x16.png" width=25 class="mr-1 ml-0 email-1" alt="email icon"></span>
 						<em class="hdg-colour email"><strong>japaneselessons4u@gmail.com</strong></em>
-					</p>
+					</p><br>
+
+					<h6>Cancellation Policy</h6>
+					<p class="cancellation">Please give at least 24 hours notice of any cancellation.</p>
+
 				</section>
 
 			</div>
