--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="description"
-		content="Learn Japanese at your own pace. I teach basic and Advanced Japanese Lessons online.">
+		content="Learn Japanese at your own pace. I'm a qualified tutor teaching basic and advanced Japanese online via Zoom | Teams.">
 	<!-- <meta name="robots" content="index,follow"> -->
 	<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
 
@@ -80,7 +80,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-sm-10 col-lg-8 col-xl-7 col-12 offset-sm-1 offset-md-2 offset-lg-2">
-					<h1 class="mb-4 mt-0 text-center">Japanese Lessons | Reading | Berkshire</h1>
+					<h1 class="mb-4 mt-0 text-center">Japanese lessons in Reading, Berkshire via Teams | Zoom</h1>
 
 					<section class="para para-home">
 						<h4>Welcome to Sonoko's Japanese Lessons - <span class="logo-2"><i>SJL</i></span>
