added  more info to index file

--- a/index.html
+++ b/index.html
@@ -85,11 +85,20 @@
 					<section class="para para-home">
 						<h4>Welcome to Sonoko's Japanese Lessons - <span class="logo-2"><i>SJL</i></span>
 						</h4>
+						<p>Are you thinking of improving your speaking skills or simply want to take it up as your new
+							hobby?</p>
 
 						<p>
 							Learn Japanese from the comfort of your own home.
 							Lessons are flexible and you can learn at your own pace.
 						</p>
+
+						<p>No prior knowledge of Japanese is necessary. All you'll need is a keen interest to learn.
+						</p>
+
+						<p>If you just need a crash course in the language, such as if you intend to visit Japan, then
+							this can be
+							arranged.</p>
 
 						<p>Lessons are given online via Microsoft Teams <span class="pipe">|</span> Zoom on a
 							one-to-one basis.
