removed UK from title

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<link rel="stylesheet" type="text/css" href="css/site.css">
 	<link rel="canonical" href="https://www.japaneselessons4u.com/">
 
-	<title>Home | Learn Japanese | Reading | Berkshire | UK</title>
+	<title>Home | Learn Japanese | Reading | Berkshire</title>
 </head>
 
 <body>
